--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,13 @@
 		    <artifactId>jena-shacl</artifactId>
 		    <version>4.7.0</version>
 		</dependency>
-				
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.13.2</version>
+		    <scope>test</scope>
+		</dependency>		
 
 	</dependencies>
 
